# pet_django

./: .env.template  .flake8  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/api/: models.py  serializers.py  urls.py  views.py
backend/app/config/: settings.py  urls.py
docker/local-deploy/: docker-compose.yaml
